# LLM-Engineering-Week1

./: day1.ipynb  day2.ipynb  day4.ipynb  pyproject.toml  sales_brocher_generator.ipynb  solution.ipynb
