[project]
name = "llm-engineering-week1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "ipykernel>=7.1.0",
    "ollama>=0.6.1",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
]
